# Peru_elecciones2026

./: .gitignore  CHANGELOG.md  DATA_AUDIT_REPORT.md  FINAL_REPORT.md  IMPLEMENTATION_PLAN.md  LICENSE  NOTICE  README.md  README_OPERACION.md  analyze_ausentismo_presidencial.py  analyze_timeline_presidencial.py  bootstrap_mesa_eleccion_control.py  build_ausentismo_presidencial.py  consultar_padron_mesas.py  filter_anomalias_materiales.py  fix_onpe_sqlite.py  fix_onpe_sqlite_all_outside_ranges.py  onpe_scraper.py  project_metadata.py  pyproject.toml  refresh_pending_actas_v2.py  refresh_pending_from_sqlite.py  refresh_presidencial_only.py  refresh_presidencial_only_v2.py  requirements.txt  split_mesas_por_votacion.py  summarize_anomalias.py  summarize_anomalias_v2.py  update_readme_status.py  validate_ubigeo_onpe_mapping.py
data/manifests/: download_manifest.csv
data/output/: mesas_consolidado.csv  mesas_consolidado.final.csv
data/output/analisis_ausentismo/: absenteeism_by_mesa.csv  absenteeism_by_ubigeo.csv  assumptions.md  audit_checks.csv  baselines_by_ubigeo.csv  candidate_impact_scenarios.csv  config_run.yaml  excess_absenteeism_flags.csv  geographic_concentration.csv  manifest_run.json  sensitivity_summary.csv
data/output/auditoria_timeline/: eventos_linea_tiempo_long.csv  resumen_flujos.csv  (+6 more)
data/reports/: anomalias.csv  anomalias_materiales.csv  refresh_pending_sqlite_summary.csv  refresh_pending_summary_v2.csv  refresh_presidencial_summary.csv
docs/analisis_ausentismo/: METHODOLOGY.md  REPORT_STRUCTURE.md
tests_operational/: test_operational_scripts.py
(+28 files in other folders)
