[project]
name = "onpe-actas-scraper"
version = "0.3.0"
license = "Apache-2.0"
authors = [{ name = "A Tu Manera Digital - Fernando Gallarday" }]
description = "Scraper operativo para descargar, consolidar y separar actas ONPE Elecciones 2026"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
audit = [
    "matplotlib>=3.8",
    "numpy>=1.26",
    "pandas>=2.2",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]

[project.scripts]
onpe-scraper = "onpe_scraper:main"
onpe-split-votacion = "split_mesas_por_votacion:main"
onpe-refresh-presidencial = "refresh_presidencial_only_v2:main"
onpe-build-ausentismo = "build_ausentismo_presidencial:main"
onpe-validate-ubigeo = "validate_ubigeo_onpe_mapping:main"
onpe-consultar-padron-mesas = "consultar_padron_mesas:main"
onpe-update-readme-status = "update_readme_status:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = [
    "onpe_scraper.py",
    "build_ausentismo_presidencial.py",
    "project_metadata.py",
    "refresh_presidencial_only_v2.py",
    "split_mesas_por_votacion.py",
    "validate_ubigeo_onpe_mapping.py",
    "consultar_padron_mesas.py",
    "update_readme_status.py",
]

[tool.pytest.ini_options]
testpaths = ["tests_operational"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
